syntax = "proto3";
package reapchain.witness;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "witness/params.proto";
import "witness/anchored.proto";
// this line is used by starport scaffolding # 1

option go_package = "reapchain/x/witness/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/reapchain/witness/params";
  }
  // Queries a Anchored by id.
	rpc Anchored(QueryGetAnchoredRequest) returns (QueryGetAnchoredResponse) {
		option (google.api.http).get = "/reapchain/witness/anchored/{id}";
	}

	// Queries a list of Anchored items.
	rpc AnchoredAll(QueryAllAnchoredRequest) returns (QueryAllAnchoredResponse) {
		option (google.api.http).get = "/reapchain/witness/anchored";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetAnchoredRequest {
	uint64 id = 1;
}

message QueryGetAnchoredResponse {
	Anchored Anchored = 1 [(gogoproto.nullable) = false];
}

message QueryAllAnchoredRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllAnchoredResponse {
	repeated Anchored Anchored = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// this line is used by starport scaffolding # 3
